Ensure correct execution order with cancelOrders
Do not send a new order to the vehicle while it is still processing a
cancelOrder action, which can lead to the new order being canceled.

Also, fix our related unit tests to verify with instant action messages
that actually contain actions.

Co-authored-by: OtisMao @ GitHub
Merged-by: Martin Grzenia <martin.grzenia@iml.fraunhofer.de>